--- a/QSoft.WPF.PanelT/MainWindow.xaml
+++ b/QSoft.WPF.PanelT/MainWindow.xaml
@@ -7,8 +7,8 @@
         mc:Ignorable="d"
         SnapsToDevicePixels="True"
         xmlns:panel="clr-namespace:QSoft.WPF.Panel;assembly=QSoft.WPF.Panel"
-        Title="MainWindow" Height="480" Width="640">
-    <TabControl SelectedIndex="1">
+        Title="MainWindow" Height="400" Width="300">
+    <TabControl SelectedIndex="0">
         <TabItem Header="Basic1">
             <Grid>
                 <Grid.RowDefinitions>
@@ -16,19 +16,13 @@
                     <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
                 <local:DpiDecorator>
-                    <panel:FlexPanel JustifyContent="SpaceAround"  x:Name="flexpanel" Background="Pink" Padding="0,0,0,0" Visibility="Visible">
+                    <panel:FlexPanel BorderBrush="Goldenrod" BorderThickness="10,20,30,40" CornerRadius="10,20,30,40" JustifyContent="SpaceAround"  x:Name="flexpanel" Background="Pink" Padding="0,0,0,0" Visibility="Visible">
                         <Rectangle Width="50" Height="50" Fill="Red" Stroke="Black" StrokeThickness="1"/>
                         <Rectangle Width="100" Height="100" Fill="Green" Stroke="Black" StrokeThickness="1"/>
                         <Rectangle Width="200" Height="200" Fill="Blue" Stroke="Black" StrokeThickness="1"/>
-                        <Button panel:FlexPanel.AlignSelf="Start" Click="Button_Click">A</Button>
+                        <!--<Button panel:FlexPanel.AlignSelf="Start" Click="Button_Click">A</Button>
                         <Button panel:FlexPanel.AlignSelf="Center" Click="Button_Click">B</Button>
-                        <Button panel:FlexPanel.AlignSelf="End" Click="Button_Click">C</Button>
-                        <!--<TextBlock Text="Title"/>
-                        <CheckBox>AA</CheckBox>
-                        <Button panel:FlexPanel.AlignSelf="Start">Button</Button>
-                        <ComboBox x:Name="combobox_alignself" SelectionChanged="combobox_alignself_SelectionChanged" ItemsSource="{Binding AlignSelf}">
-                            
-                        </ComboBox>-->
+                        <Button panel:FlexPanel.AlignSelf="End" Click="Button_Click">C</Button>-->
                         
                     </panel:FlexPanel>
                 </local:DpiDecorator>
@@ -47,12 +41,25 @@
         </TabItem>
         <TabItem Header="com">
             <local:DpiDecorator>
-                <panel:FlexPanel Background="Gray" Padding="16" Gap="8" FlexDirection="Column" AlignItems="Center">
-                    <panel:FlexPanel Padding="16" AlignItems="Start" FlexDirection="Column" Gap="8" panel:FlexPanel.AlignSelf="Stretch">
-                        <panel:FlexPanel FlexDirection="Column" AlignItems="Center"  Gap="8">
+                <panel:FlexPanel Padding="16" AlignItems="Start" FlexDirection="Column" Gap="8" panel:FlexPanel.AlignSelf="Stretch">
+                    <panel:FlexPanel FlexDirection="Column" AlignItems="Center"  Gap="8" panel:FlexPanel.AlignSelf="Stretch">
+                        <Border panel:FlexPanel.AlignSelf="Stretch">
                             <panel:FlexPanel JustifyContent="SpaceBetween" AlignItems="Center" Height="40">
                                 <panel:FlexPanel Gap="8" AlignItems="Center">
                                     <TextBlock Text="Title"/>
+                                    <TextBlock Text="png"/>
+                                </panel:FlexPanel>
+                                <panel:FlexPanel Gap="9" JustifyContent="End" AlignItems="Center" panel:FlexPanel.AlignSelf="Stretch">
+                                    <TextBlock>Test</TextBlock>
+                                    <CheckBox/>
+                                </panel:FlexPanel>
+                            </panel:FlexPanel>
+                        </Border>
+
+                        <panel:FlexPanel FlexDirection="Column" JustifyContent="Center" AlignItems="Start" panel:FlexPanel.AlignSelf="Stretch" Padding="16,0,0,0" Gap="8">
+                            <panel:FlexPanel JustifyContent="SpaceBetween" AlignItems="Center" panel:FlexPanel.AlignSelf="Stretch" Height="40">
+                                <panel:FlexPanel Gap="8" AlignItems="Center">
+                                    <TextBlock Text="Sub title 1"/>
                                     <TextBlock Text="png"/>
                                 </panel:FlexPanel>
                                 <panel:FlexPanel Gap="9" JustifyContent="End">
@@ -60,47 +67,32 @@
                                     <CheckBox/>
                                 </panel:FlexPanel>
                             </panel:FlexPanel>
-
-                            <panel:FlexPanel FlexDirection="Column" JustifyContent="Center" AlignItems="Start" Padding="16,0,0,0" Gap="8">
-                                <panel:FlexPanel JustifyContent="SpaceBetween" AlignItems="Center" Height="40">
-                                    <panel:FlexPanel Gap="8" AlignItems="Center">
-                                        <TextBlock Text="Sub title 1"/>
-                                        <TextBlock Text="png"/>
-                                    </panel:FlexPanel>
-                                    <panel:FlexPanel Gap="9" JustifyContent="End">
-                                        <TextBlock>Test</TextBlock>
-                                        <CheckBox/>
-                                    </panel:FlexPanel>
-                                </panel:FlexPanel>
-                                <panel:FlexPanel JustifyContent="SpaceBetween">
-                                    <panel:FlexPanel Gap="8" AlignItems="Center">
-                                        <TextBlock Text="Sub title 2"/>
-                                        <TextBlock Text="png"/>
-                                    </panel:FlexPanel>
-                                </panel:FlexPanel>
-                                <panel:FlexPanel Padding="16,0,0,0" Gap="8" JustifyContent="SpaceAround">
-                                    <Button>Fun1</Button>
-                                    <Button>Fun2</Button>
-                                </panel:FlexPanel>
-                                <panel:FlexPanel JustifyContent="SpaceBetween">
-                                    <panel:FlexPanel Gap="8" AlignItems="Center">
-                                        <TextBlock Text="Sub title 3"/>
-                                        <TextBlock Text="png"/>
-                                    </panel:FlexPanel>
-                                </panel:FlexPanel>
-                                <panel:FlexPanel Padding="16,0,0,0" Gap="8" JustifyContent="SpaceAround">
-                                    <Button>Fun1</Button>
-                                    <Button>Fun2</Button>
+                            <panel:FlexPanel JustifyContent="SpaceBetween">
+                                <panel:FlexPanel Gap="8" AlignItems="Center">
+                                    <TextBlock Text="Sub title 2"/>
+                                    <TextBlock Text="png"/>
                                 </panel:FlexPanel>
                             </panel:FlexPanel>
+                            <panel:FlexPanel Padding="16,0,0,0" Gap="8" JustifyContent="SpaceAround" panel:FlexPanel.AlignSelf="Stretch">
+                                <Button>Fun1</Button>
+                                <Button>Fun2</Button>
+                            </panel:FlexPanel>
+                            <panel:FlexPanel JustifyContent="SpaceBetween">
+                                <panel:FlexPanel Gap="8" AlignItems="Center">
+                                    <TextBlock Text="Sub title 3"/>
+                                    <TextBlock Text="png"/>
+                                </panel:FlexPanel>
+                            </panel:FlexPanel>
+                            <panel:FlexPanel Padding="16,0,0,0" Gap="8" JustifyContent="SpaceAround" panel:FlexPanel.AlignSelf="Stretch">
+                                <Button>Fun1</Button>
+                                <Button>Fun2</Button>
+                            </panel:FlexPanel>
                         </panel:FlexPanel>
-
-
-
                     </panel:FlexPanel>
 
-                </panel:FlexPanel>
 
+
+                </panel:FlexPanel>
             </local:DpiDecorator>
         </TabItem>
     </TabControl>
