--- a/QSoft.WPF.PanelT/MainWindow.xaml
+++ b/QSoft.WPF.PanelT/MainWindow.xaml
@@ -23,14 +23,14 @@
                     <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
                 <local:DpiDecorator>
-                    <panel:FlexPanel VerticalAlignment="Center" HorizontalAlignment="Center" BorderBrush="Purple" BorderThickness="10,20,30,40" CornerRadius="0" JustifyContent="SpaceAround"  x:Name="flexpanel" Background="Pink" Padding="5,10,15,20" Visibility="Visible">
-                        <Rectangle Width="50" Height="50" Fill="Red" Stroke="Black" StrokeThickness="1"/>
+                    <panel:FlexPanel BorderBrush="Purple" BorderThickness="10,20,30,40" CornerRadius="0" JustifyContent="SpaceAround"  x:Name="flexpanel" Background="Pink" Padding="5,10,15,20" Visibility="Visible">
+                        <!--<Rectangle Width="50" Height="50" Fill="Red" Stroke="Black" StrokeThickness="1"/>
                         <Rectangle Width="100" Height="100" Fill="Green" Stroke="Black" StrokeThickness="1"/>
-                        <Rectangle Width="200" Height="200" Fill="Blue" Stroke="Black" StrokeThickness="1"/>
-                        <!--<Button Click="Button_Click">A</Button>
-                        <Button panel:FlexPanel.Grow="1" Click="Button_Click">B1</Button>
-                        <Button panel:FlexPanel.Grow="2" Click="Button_Click">B2</Button>
-                        <Button Click="Button_Click">C</Button>-->
+                        <Rectangle Width="200" Height="200" Fill="Blue" Stroke="Black" StrokeThickness="1"/>-->
+                        <Button Click="Button_Click">A</Button>
+                        <Button panel:FlexPanel.Grow="0" Click="Button_Click">B1</Button>
+                        <Button panel:FlexPanel.Grow="0" Click="Button_Click">B2</Button>
+                        <Button Click="Button_Click">C</Button>
                         
                     </panel:FlexPanel>
                 </local:DpiDecorator>
