--- a/QSoft.WPF.Panel.PathT/MainWindow.xaml
+++ b/QSoft.WPF.Panel.PathT/MainWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Loaded="Window_Loaded"
         xmlns:qpanel="clr-namespace:QSoft.WPF.Panel"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="450" Width="450">
     <TabControl>
         <TabItem Header="Circle">
             <Grid>
@@ -15,12 +15,10 @@
                     <RowDefinition Height="Auto"/>
                     <RowDefinition/>
                 </Grid.RowDefinitions>
-                
-                <qpanel:CirclePanel Grid.Row="1">
-                    <Border Width="100" Height="100" Background="Red" BorderBrush="Green" BorderThickness="1"/>
-                    <Border Width="100" Height="100" Background="Red" BorderBrush="Green" BorderThickness="1"/>
-                    <Border Width="100" Height="100" Background="Red" BorderBrush="Green" BorderThickness="1"/>
-                    <Border Width="100" Height="100" Background="Red" BorderBrush="Green" BorderThickness="1"/>
+                <qpanel:CirclePanel Grid.Row="1" Background="Yellow">
+                    <Border Width="30" Height="30" BorderBrush="Red" BorderThickness="2"/>
+                    <Border Width="30" Height="30" BorderBrush="Red" BorderThickness="2"/>
+                    <Border Width="30" Height="30" BorderBrush="Red" BorderThickness="2"/>
                 </qpanel:CirclePanel>
             </Grid>
         </TabItem>
